# yuokada.github.com

./: .buildinfo  .buildinfo.bak  .gitignore  .gitmodules  Makefile  README.md  _history.html  _history2.html  bookreview.html  genindex.html  history.html  history1.html  history2.html  index.html  objects.inv  pg_history.html  pyproject.toml  requirements.txt  search.html  searchindex.js  skill.html
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/instructions/: docs.instructions.md  python.instructions.md
.github/workflows/: auto-approve.yml  autoapprove-dependabot.yml  automerge-dependabot.yml  build-sphinx.yml
_sources/: _history2.rst.txt  history.rst.txt  history.txt  index.rst.txt  index.txt  pg_history.rst.txt  skill.txt
_static/: documentation_options.js
codeiq/: cardinary.py  input.txt  input2.txt  suudoku.py
docs/: _history.html  bookreview.html  history.html  history1.html  index.html  objects.inv  pg_history.html  searchindex.js  skill.html
docs/review/: emacs_jissen.html
docs/works/: aws-sdk-s3.html  consul.html  cyberduck-s3.html  s3.html
misc/antlr-example/: Hello.g4  README.md
misc/database/: README.md
misc/dns/: README.md
misc/license/: license.txt
review/: emacs_jissen.html  little_bets.html  need_to_google.html  sotware-design-2012-08.html
source/: bookreview.rst  conf.py  history.rst  history1.rst  history2.rst  index.rst  pg_history.rst  skill.rst
sources/: bookreview.txt  history.txt  history1.rst.txt  history2.rst.txt  index.rst.txt  index.txt  pg_history.txt  skill.txt
static/: documentation_options.js
works/: aws-sdk-s3.html  chef.html  cyberduck-s3.html  s3.html
(+93 files in other folders)
