[tool.poetry]
name = "yuokada-github-com"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "yuokada"}]

[tool.poetry.dependencies]
python = "^3.9"
certifi = "^2023.11.17"
sphinx = "7.2.6"
sphinx-bootstrap-theme = "^0.8.1"
sphinxtogithub = {git = "https://github.com/proycon/sphinx-to-github.git", rev = "9b61be70ccfbec99724544c3e94ed1c43fb5295c"}

[tool.poetry.group.dev.dependencies]
watchdog = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
