[project]
name = "yuokada-github-com"
version = "0.1.0"
description = ""
authors = [{name = "Your Name", email = "you@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2025.6.15",
    "sphinx>=8.2.3",
    "sphinx-bootstrap-theme>=0.8.1",
]

[project.optional-dependencies]
dev = [
    "watchdog>=6.0.0",
]
